# caretaker_control

./: .gitignore  CMakeLists.txt  README.md  build.sh  make_all.bat  make_run.sh  run_app.sh
lib/: CMakeLists.txt
lib/asio/: CMakeLists.txt
lib/caretakerlib/: CMakeLists.txt  caretaker_dynamic.h  caretaker_static.h  libraryVersion
lib/caretakerlib/drivers/: ctm_usb_cdc.inf
lib/caretakerlib/examples/C#/: README
lib/caretakerlib/examples/C#/CaretakerCSharpSampleApp/: MainWindow.xaml  MainWindow.xaml.cs  Waveform.cs
lib/caretakerlib/examples/C++/: CaretakerNativeSampleApp.sln  README
lib/caretakerlib/examples/CSharpSampleApp/: README
lib/caretakerlib/linux/: CMakeLists.txt  caretaker.h  libraryVersion
lib/caretakerlib/manual/html/: CaretakerDevice_8h_source.html  annotated.html  caretaker_8h_source.html  classCaretaker_1_1BatteryStatus.html  classCaretaker_1_1CuffStatus.html  classCaretaker_1_1Device.html  classCaretaker_1_1DeviceObserver.html  classCaretaker_1_1DeviceStatus.html  classCaretaker_1_1Device_1_1LibraryCallback.html  classCaretaker_1_1ParamPulseSnapshot.html  classCaretaker_1_1PrimaryVitals.html  classCaretaker_1_1SecondaryVitals.html  classCaretaker_1_1WaveformDataPoints.html  classes.html  classlibct__cal__type__t.html  classlibct__context__t.html  classlibct__device__class__t.html  classlibct__device__config__idx__t.html  classlibct__device__state__t.html  classlibct__monitor__flags__t.html  classlibct__posture__t.html  classlibct__status__t.html  dir_250558fd2cbacd247a45c0a39807db85.html  files.html  functions.html  functions_0x7e.html  functions_a.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_func.html  functions_g.html  functions_h.html  functions_i.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  (+49 more)
lib/caretakerlib/windows/: CMakeLists.txt  caretaker_dynamic.h  caretaker_static.h
lib/cxxopts/: CMakeLists.txt  cxxopts.hpp
lib/doctest/: CMakeLists.txt
lib/enkiTS/: CMakeLists.txt
lib/freeglut_lib/: CMakeLists.txt
lib/glew_lib/: CMakeLists.txt
lib/glfw_lib/: CMakeLists.txt
lib/guilite/: CMakeLists.txt
lib/linux/examples/ct4ui/: README  run_ct4ui.sh
lib/linux/manual/html/: annotated.html  app_monitoring.html  caretaker_8h_source.html  classlibct__cal__type__t.html  classlibct__device__class__t.html  classlibct__device__state__t.html  files.html  functions_vars.html  group__unmanaged__device.html  group__unmanaged__secondary__api.html  index.html  linux_integration.html  structlibct__app__callbacks__t.html  structlibct__bp__settings__t.html  structlibct__cal__curve__t.html  structlibct__device__status__t.html  structlibct__pulse__t.html  structlibct__pulse__waveform__t.html  structlibct__stream__data__t.html  structlibct__version__t.html  structlibct__vitals2__t.html  structlibct__vitals__t.html
lib/nuklear/: CMakeLists.txt  nuklear.h  nuklear_glfw_gl3.h
lib/taojson/: CMakeLists.txt
lib/windows/examples/CSharpSampleApp/: CaretakerCSharpSampleApp.sln
lib/windows/manual/html/: CaretakerDevice_8h_source.html  annotated.html  caretaker_8h_source.html  classCaretaker_1_1CuffStatus.html  classCaretaker_1_1Device.html  classCaretaker_1_1DeviceObserver.html  classCaretaker_1_1DeviceStatus.html  classCaretaker_1_1Device_1_1LibraryCallback.html  classCaretaker_1_1PrimaryVitals.html  classCaretaker_1_1SecondaryVitals.html  classes.html  classlibct__cal__type__t.html  classlibct__monitor__flags__t.html  classlibct__status__t.html  files.html  functions_0x7e.html  functions_c.html  functions_d.html  functions_func.html  functions_h.html  functions_i.html  functions_l.html  functions_m.html  functions_o.html  functions_p.html  functions_t.html  functions_v.html  functions_vars.html  functions_vars_h.html  functions_vars_i.html  functions_vars_m.html  functions_vars_n.html  functions_vars_o.html  functions_vars_s.html  functions_vars_t.html  functions_vars_v.html  functions_w.html  group__unmanaged__device.html  group__unmanaged__primary__api.html  group__unmanaged__secondary__api.html  (+16 more)
src/: CMakeLists.txt  CSVWriter.h  appConfig.h.in  basic_serial.hpp  caretakerhandler.cpp  caretakerhandler.hpp  cli.cpp  cli.hpp  gui.cpp  gui.hpp  iinterface.hpp  main.cpp  program_state.cpp  program_state.hpp  stdcapture.cpp  stdcapture.hpp
test/: CMakeLists.txt  doctest.cpp
(+85 files in other folders)
